src/objects/Neo4J_License_Generation_Service__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings associated with Neo4J license key generation service</description>
    <fields>
        <fullName>Additional_Recipients_For_License_Emails__c</fullName>
        <description>Comma separated list of emails that should be copied when sending license keys to customers</description>
        <inlineHelpText>Comma separated list of emails that should be copied when sending license keys to customers</inlineHelpText>
        <label>Additional Recipients For License Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_License_Key_Duration_for_Leads__c</fullName>
        <description>Default duration (days) license keys generated for leads</description>
        <inlineHelpText>Default duration (days) license keys generated for leads</inlineHelpText>
        <label>Default License Key Duration for Leads</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_Bloom_Desktop__c</fullName>
        <description>Email template used for sending trial/production licenses for Bloom Desktop app</description>
        <inlineHelpText>Email template used for sending trial/production licenses for Bloom Desktop app</inlineHelpText>
        <label>Email Template Name (Bloom Desktop app)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_Bloom_Server__c</fullName>
        <description>Email template used for sending Bloom Server Plugin activation keys</description>
        <inlineHelpText>Email template used for sending Bloom Server Plugin activation keys</inlineHelpText>
        <label>Email Template (Bloom Server - Plugin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>API name of the email template used for sending license keys</description>
        <inlineHelpText>API name of the email template used for sending license keys</inlineHelpText>
        <label>Email Template Name (Neo4j Desktop)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_neo4j_gds__c</fullName>
        <description>Added in SFDC-0257</description>
        <label>Email Template Name neo4j-gds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Notification_Recipients__c</fullName>
        <description>Comma separated list of email IDs that should receive error notifications related to Licensing Services</description>
        <inlineHelpText>Comma separated list of email IDs that should receive error notifications related to Licensing Services</inlineHelpText>
        <label>Error Notification Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_API_Key__c</fullName>
        <description>Access key associated with licensing API</description>
        <inlineHelpText>Access key associated with licensing API</inlineHelpText>
        <label>Licensing API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_API_URL__c</fullName>
        <description>URL to Licensing API</description>
        <inlineHelpText>URL to Licensing API</inlineHelpText>
        <label>Licensing API URL</label>
        <type>Url</type>
    </fields>
    <label>Neo4J License Generation Service</label>
</CustomObject>